# podknow

./: .coverage  .gitignore  INSTALL.md  ISSUES_CHECKLIST.md  Makefile  README.md  SPRINT_2_PROGRESS_SUMMARY.md  UPDATE_SUMMARY.md  WORK_BREAKDOWN.md  WORK_BREAKDOWN_SUPPLEMENT.md  podknow.py  prd.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.kiro/specs/podcast-transcription-tool/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: configuration.md  example-config.md
docs/work/: ANALYSIS_SUMMARY.md  CODE_STYLE.md  CREATE_ISSUES_GUIDE.md  FIX_SUMMARY_2025-10-27.md  ISSUE-005_SUMMARY.md  ISSUE-005_VERIFICATION_REPORT.md  ISSUE-006-007_FIX_SUMMARY.md  ISSUES_CHECKLIST.md  SPRINT_2_PROGRESS_SUMMARY.md  TEST_FAILURE_ANALYSIS.md  WORK_BREAKDOWN.md
podknow/: __init__.py  __main__.py  constants.py  exceptions.py
podknow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
podknow/cli/: __init__.py  main.py
podknow/config/: __init__.py  config_manager.py  default_config.md  manager.py  models.py  template_manager.py
podknow/interfaces/: __init__.py  analyzer.py  discovery.py  downloader.py
podknow/models/: __init__.py  analysis.py  episode.py  output.py  podcast.py  transcription.py
podknow/services/: __init__.py  analysis.py  config.py  discovery.py  episode.py  rss.py  rss_parser.py  subscription_manager.py  subscription_monitor.py  transcription.py  workflow.py
podknow/services/analysis/: __init__.py  claude_analyzer.py  content_analyzer.py  ollama_analyzer.py
podknow/services/discovery/: __init__.py  apple_podcasts.py  spotify.py  unified.py
podknow/services/media/: __init__.py  downloader.py  processor.py  transcription.py
podknow/utils/: __init__.py  cli_errors.py  progress.py
scripts/: README.md  create_github_issues.py  install.bat  install.py  install.sh
tests/: conftest.py  run_integration_tests.py  test_analysis_service.py  test_cli.py  test_cli_integration.py  test_config_manager.py  test_discovery_service.py  test_episode_service.py  test_installation.py  test_models.py  test_rss_parser.py  test_transcription_service.py  test_workflow_integration.py
